--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -6,9 +6,9 @@ tools:
     php_loc:
         enabled: true
         excluded_dirs: [vendor, tests]
-filter:
-    excluded_paths:
-        - 'tests/*'
+#filter:
+#    excluded_paths:
+#        - 'tests/*'
 build:
     environment:
       php:
